# rlzav

./: Cargo.toml  LICENSE  archive.lzav  build.rs
benches/: compression_benchmark.rs
example/: readme.md
src/: compress.rs  constants.rs  decompress.rs  error.rs  errors.rs  lib.rs  main.rs  tests.rs  utils.rs
src/c/: lzav.h  mod.rs  wrapper.c
src/rust/: lzav.rs  mod.rs
