[package]
name = "rlzav"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Clanton <ryanclanton@outlook.com>"]
description = "Rust implementation of LZAV compression algorithm"
license = "MIT"
repository = "https://github.com/yourusername/lzav-rs"

[features]
default = ["c-backend"]  # Use C implementation by default
c-backend = ["cc"]       # C implementation
rust-backend = []        # Pure Rust implementation
[dependencies]
libc = "0.2"
[dev-dependencies]
rand = "0.8"

[build-dependencies]
cc = { version = "1.0", optional = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
